--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@
   Costiui: # replace this with your info
   name: "Costiui"
   siterole: "webmaster, developer, copywriter, designer"
-  uri: http://costiui.net/
+  uri: http://costiui.ml/
   email:
   twitter: "costiui"
 # you can add more authors here
