--- a/_data/network.yml
+++ b/_data/network.yml
@@ -11,6 +11,6 @@
   title: "Rónaszék"
 
 - name: "About Costiui.Net"
-  url: "https://about.costiui.net/"
-  class: "About Costiui.Net"
-  title: "About Costiui.Net"
+  url: "https://about.costiui.ml/"
+  class: "About Costiui.ml"
+  title: "About Costiui.ml"
