--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ msapplication_tilecolor:                '#fabb00'
 #    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<
 #   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
 
-# og_image:                           'https://about.costiui.net/img/profile.jpg'
+# og_image:                           'https://about.costiui.ml/img/profile.jpg'
 og_locale:                          'en_EN'
 og_type:                            'website'
 
