--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: Costiui
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://blog.costiui.ml'
+url: 'https://costiui.ml'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
@@ -38,7 +38,7 @@ improve_content: https://github.com/Costiui/blog/edit/master
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://blog.costiui.ml/images/'
+urlimg: 'https://costiui.ml/images/'
 
 
 # Logo size is 600x80 pixels
