--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 #
 #
 # Title of your website
-title: 'Blog Costiui.ml'
+title: 'Costiui.ml'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: 'Blog Costiui.ml'
+slogan: 'Costiui.ml'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
 description: '»Coștiui este un sat în comuna Rona de Sus din judeţul Maramureş, Transilvania, România.'
