--- a/_data/network.yml
+++ b/_data/network.yml
@@ -10,7 +10,7 @@
   class: "Wikipedia HU Rónaszék"
   title: "Rónaszék"
 
-- name: "About Costiui.Net"
+- name: "About Costiui.ml"
   url: "https://about.costiui.ml/"
   class: "About Costiui.ml"
   title: "About Costiui.ml"
